fix gap below footer by .section class, add links to icon at the top of the footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,7 @@ a {
 
 #tour-cards .card:hover {
     box-shadow: 5px 5px 10px rgba(36, 36, 36, 0.5);
+    transform: scale(1.01);
 }
 
 #tour-cards .card-body {
@@ -147,6 +148,20 @@ a {
 /*Footer Section*/
 footer {
     background-color: rgba(237, 196, 121, .6);
+    box-shadow: 0 -2px 5px 2px rgba(0, 0, 0, 0.1);
+}
+
+#footer-navigation > p {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+#footer-navigation .footer-nav-icon {
+    padding: 0 0.9rem;
+}
+
+#footer-navigation a:hover * {
+    transform: scale(1.2);
 }
 
 /*Media queries*/
